# ultra-gitlab

./: .gitignore  CLAUDE.md  Cargo.toml  Prompt.md  README.md  RELEASING.md  cliff.toml  eslint.config.js  index.html  package.json  playwright.config.ts  progress.txt  vite.config.ts
.github/workflows/: playwright.yml  release.yml
.husky/: pre-commit
.specify/memory/: constitution.md
docs/superpowers/plans/: 2026-04-20-issue-cache-first-reads.md  2026-04-20-mr-approval-delta.md  2026-06-01-ratatui-cli.md  2026-06-01-undraft-merge-requests.md  2026-06-03-cli-pipelines.md  2026-06-05-cli-comments-suggestions.md  2026-06-11-auto-run-manual-jobs.md
docs/superpowers/specs/: 2026-04-20-mr-approval-delta-design.md  (+7 more)
e2e/: activity-drawer.spec.ts  comment-delete.spec.ts  diff-comment-delete.spec.ts  issue-description-edit.spec.ts  job-log.spec.ts  mr-detail-suggestions.spec.ts  mr-detail.spec.ts  mr-list.spec.ts  mr-pipeline-dialog.spec.ts  my-mrs.spec.ts  navigation.spec.ts  pierre-diff.spec.ts  pipeline-auto-run.spec.ts  pipeline-downstream.spec.ts  screenshots.spec.ts  shortcut-editor.spec.ts
e2e/fixtures/: seed-data.ts  seed.sql  tauri-mock.ts  test-base.ts
extras/: open-in-ultra-gl.user.js
ralph/: prd.json  progress.txt
scripts/: bump-version.ts
scripts/ralph/: .last-branch  CLAUDE.md  prd.json  progress.txt
specs/001-local-mr-review/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: App.css  App.tsx  main.tsx
src-gpui/: Cargo.toml  README.md
src-gpui/src/: backend.rs  diff.rs  highlight.rs  main.rs  view.rs
src-gpui/src/view/: app.rs  mod.rs  mr_detail.rs  mr_list.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/cli/: Cargo.toml  README.md
src-tauri/cli/src/: actions.rs  app.rs  comments.rs  data.rs  db_path.rs  editor.rs  event.rs  filter.rs  main.rs  pipelines.rs  settings.rs  syntax.rs  update.rs  util.rs
src-tauri/cli/src/ui/: confirm.rs  detail.rs  diff.rs  footer.rs  help.rs  list.rs  mod.rs  pipelines.rs
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: approval.rs  auth.rs  auto_merge.rs  auto_run.rs  avatar.rs  cli.rs  comments.rs  companion_server.rs  companion_settings.rs  diagnostics.rs  fonts.rs  gitattributes.rs  issues.rs  mod.rs  mr.rs  mr_approval.rs  notification_settings.rs  notifications.rs  pipeline.rs  reviewers.rs  settings.rs  sync.rs
src-tauri/src/core/: comments.rs  mod.rs  mr_actions.rs  mr_query.rs  pipelines.rs
src-tauri/src/db/: auto_merge.rs  auto_run.rs  file_cache.rs  issue_notes.rs  mod.rs  mr_approval.rs  notification_settings.rs  pipeline_cache.rs  pool.rs
src-tauri/src/db/migrations/: 0001_initial_schema.sql  0002_add_discarded_status.sql  0003_add_user_has_approved.sql  0004_add_project_name.sql  0005_create_projects_table.sql  0006_file_content_cache.sql  0007_gitattributes_cache.sql  0008_add_authenticated_username.sql  0009_create_mr_reviewers.sql  0010_create_pipeline_projects.sql  0011_create_notification_settings.sql  0012_add_head_pipeline_status.sql  0013_drop_reviewer_avatar_url.sql  0014_avatar_cache.sql  0015_fix_mr_unique_constraint.sql  0016_add_default_instance.sql  0017_sync_metrics.sql  0018_add_state_changed_at.sql  0019_pipeline_status_cache.sql  0020_create_issues_and_starring.sql  0021_create_issue_notes.sql  0022_auto_merge_claims.sql  0022_mr_approval_tracking.sql  0023_add_mr_assigned_to_me.sql  0024_auto_run_claims.sql
src-tauri/src/models/: comment.rs  diff.rs  gitlab_instance.rs  issue.rs  merge_request.rs  mod.rs  mr_reviewer.rs  notification_settings.rs  pipeline_project.rs  project.rs  sync_action.rs
src-tauri/src/services/: auto_run.rs  avatar.rs  companion_api.rs  companion_auth.rs  companion_server.rs  credentials.rs  gitattributes.rs  gitlab_client.rs  highlighter.rs  mod.rs  sync_engine.rs  sync_events.rs  sync_processor.rs  sync_queue.rs
src-tauri/tests/: memory_verification.rs  offline_workflow.rs  quickstart_verification.rs  rollback_on_failure.rs
src/commands/: registry.ts
src/components/: BackButton.css  BackButton.tsx  CommentOverlay.tsx  KeyGlyph.tsx  Markdown.css  Markdown.tsx  ShortcutBar.css  ShortcutBar.tsx  ShortcutsProvider.tsx  TabBar.css  TabBar.tsx  ThemeProvider.tsx
src/config/: shortcuts.ts
src/hooks/: useActivityData.ts  useAutoMerge.ts  useAutoRun.ts  useCompanionAuth.ts  useCompanionStatus.ts  useCondensedModeAnnouncement.ts  useCopyToast.ts  useCustomShortcuts.ts  useDeepLink.ts  useFileContent.ts  useHasApprovedMRs.ts  useKeyboardNav.ts  useListSearch.ts  useNotifications.ts  useSmallScreen.ts  useSyncStatus.ts  useTheme.ts  useUpdateChecker.ts
src/lib/: pendingMerges.ts  queryKeys.ts  tauriEvents.ts
src/pages/: AuthPage.css  AuthPage.tsx  IssuesPage.css  IssuesPage.tsx  JobLogPage.css  JobLogPage.tsx  MRDetailPage.css  MRDetailPage.tsx  MRListPage.css  MRListPage.tsx  MRLoadingPage.css  MRLoadingPage.tsx  MyMRDetailPage.css  MyMRDetailPage.tsx  MyMRsPage.css  MyMRsPage.tsx  PipelineDetailPage.css  PipelineDetailPage.tsx  PipelinesPage.css  PipelinesPage.tsx  Settings.css  Settings.tsx
src/services/: analytics.ts  gitlab.ts  index.ts  storage.ts  tauri.ts  transport.ts
src/styles/: shared.css  syntax.css
src/themes/: deriveTheme.ts  index.ts  kanagawa-light.ts  kanagawa-wave.ts  loved.ts  monacoAdapter.ts  types.ts
src/types/: index.ts
src/utils/: ansiParser.ts  classifyFiles.ts  deepLinkParser.ts  fileNavigation.ts  formatRelativeTime.ts  gitlabSuggestions.ts  languageDetection.ts  logLineParser.ts
tasks/: plan-centralize-shortcuts.md  prd-approval-immediate-sync.md  prd-diff-collapse.md  prd-event-driven-sync.md  prd-full-file-caching.md  prd-generated-file-collapse.md  prd-issue-offline-support.md  prd-mobile-web-companion.md  prd-monaco-editor-integration.md  prd-my-mrs-screen.md  prd-notifications.md  prd-pipeline-logs.md  prd-pipelines-overview.md  prd-project-titles.md  prd-sync-engine-performance.md  prd-tanstack-query-refactor.md  prd-themes.md  prd-token-management.md
(+220 files in other folders)
