[package]
name = "ultra-gitlab-gpui"
version = "0.1.0"
edition = "2021"
description = "Experimental native GPUI frontend for Ultra GitLab. Shares the SQLite-backed sync engine with src-tauri/."
publish = false

[[bin]]
name = "ultra-gitlab-gpui"
path = "src/main.rs"

[dependencies]
# Backend & sync engine - reuses the Rust services from the Tauri crate
# (db, models, services::{sync_engine, gitlab_client, ...}) without
# pulling in tauri / commands / companion server.
ultra-gitlab = { path = "../src-tauri", default-features = false }

# Async runtime - the sync engine spawns tokio tasks.
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread", "macros"] }

# Used directly to query the shared SQLite cache from the GPUI executor.
# Version must match the one src-tauri/ pins so we share the same `Pool<Sqlite>`.
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Serialization (event payload bridging)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Date/Time formatting for the MR list
chrono = { version = "0.4", features = ["serde"] }

# GPUI itself + Longbridge's component library.
# Pinning all three to the same git rev keeps trait/type identity
# consistent. gpui-component@e64411f currently builds against zed@ad042e5
# (its Cargo.toml uses an unpinned `git = "..."` dep but the checkout
# resolved this rev). Bump them together when refreshing.
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "x11", "wayland", "runtime_shaders"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }

# Syntax highlighting. Zed itself uses tree-sitter — not LSP — for
# coloring code in the editor; LSPs are for semantic features
# (completion, go-to-def) and are an awful fit for diff hunks where we
# never have a full file on disk. Grammars are linked in at compile
# time so there is nothing to "auto-install" at runtime: each
# `tree-sitter-<lang>` crate ships its parser as a generated C file
# compiled by `cc` during the build. The version `0.26` line matches
# what `tree-sitter` (already in our lock via Zed's transitive deps)
# resolves to.
tree-sitter = "0.26"
tree-sitter-highlight = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-json = "0.24"
tree-sitter-bash = "0.25"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
tree-sitter-md = "0.5"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-toml-ng = "0.7"
