[package]
name = "ultra-gitlab"
version = "0.6.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ultra_gitlab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# HTTP Client for GitLab API
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Syntax Highlighting
tree-sitter = "0.26"
tree-sitter-highlight = "0.26"

# Tree-sitter Language Grammars
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-swift = "0.7"
# tree-sitter-kotlin = "0.3"  # Disabled: uses incompatible tree-sitter 0.20 API

# Error Handling
thiserror = "2"

# Logging
log = "0.4"

# System Information (memory, CPU)
sysinfo = "0.32"

# Async Runtime
tokio = { version = "1", features = ["sync", "time"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# URL Encoding
urlencoding = "2"

# Base64 Encoding
base64 = "0.22"

# Hashing (SHA-256 for file content dedup)
sha2 = "0.10"

# Secure Credential Storage (OS keychain)
keyring = "3"
futures = "0.3.31"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"

[dev-dependencies]
tempfile = "3"

