[package]
name = "ultra-gitlab"
version = "0.12.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ultra_gitlab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# HTTP Client for GitLab API
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }


# Error Handling
thiserror = "2"

# Logging
log = "0.4"

# System Information (memory, CPU)
sysinfo = "0.32"

# Async Runtime
tokio = { version = "1", features = ["sync", "time", "net"] }

# HTTP Server (companion server)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
tokio-util = "0.7"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# URL Encoding
urlencoding = "2"

# Base64 Encoding
base64 = "0.22"

# Hashing (SHA-256 for file content dedup)
sha2 = "0.10"

# Secure Credential Storage (OS keychain)
keyring = "3"
futures = "0.3.31"

# Random number generation (companion server PIN)
rand = "0.8"

# UUID generation (companion server device tokens)
uuid = { version = "1", features = ["v4"] }

# QR code generation (companion server)
qrcode = "0.14"

# Local network interface detection
local-ip-address = "0.6"
tauri-plugin-deep-link = "2"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
