[package]
name = "ultra-gitlab"
version = "0.19.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "ultra-gitlab"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ultra_gitlab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[features]
# Default keeps the historical Tauri desktop app available.
default = ["tauri-app"]

# Enables Tauri IPC commands, the companion HTTP server, and the
# `ultra_gitlab_lib::run` entrypoint. Disable to consume just the
# backend / sync engine from a non-Tauri host (e.g. the GPUI experiment).
tauri-app = [
    "dep:tauri",
    "dep:tauri-build",
    "dep:tauri-plugin-aptabase",
    "dep:tauri-plugin-opener",
    "dep:tauri-plugin-store",
    "dep:tauri-plugin-updater",
    "dep:tauri-plugin-process",
    "dep:tauri-plugin-log",
    "dep:tauri-plugin-deep-link",
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:qrcode",
    "dep:local-ip-address",
    "dep:rand",
    "dep:keyring",
    "dep:fontdb",
    "dep:cocoa",
    "dep:notify-rust",
]

[dependencies]
# Tauri runtime (optional; only when building the Tauri desktop app).
tauri = { version = "2", features = ["tray-icon"], optional = true }
tauri-plugin-aptabase = { version = "1", optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-store = { version = "2", optional = true }
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-process = { version = "2", optional = true }
tauri-plugin-log = { version = "2", optional = true }
tauri-plugin-deep-link = { version = "2", optional = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# HTTP Client for GitLab API
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }


# Error Handling
thiserror = "2"

# Logging
log = "0.4"
env_logger = "0.11"  # used by bench_sync binary

# System Information (memory, CPU)
sysinfo = "0.32"

# Async Runtime
tokio = { version = "1", features = ["sync", "time", "net", "rt-multi-thread", "macros"] }

# HTTP Server (companion server) - only used by the Tauri companion stack.
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs", "cors"], optional = true }
tokio-util = "0.7"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# URL Encoding (used by gitlab_client for path encoding)
urlencoding = "2"

# Base64 Encoding (avatar data-URL encoding)
base64 = "0.22"

# Hashing (SHA-256 for file content dedup)
sha2 = "0.10"

# System font enumeration (only needed when exposing font picker via Tauri)
fontdb = { version = "0.22", optional = true }

# Secure Credential Storage (OS keychain) - Tauri-only consumers right now.
keyring = { version = "3", optional = true }
futures = "0.3.31"

# Random number generation (companion server PIN)
rand = { version = "0.8", optional = true }

# UUID generation (sync run IDs + companion server device tokens)
uuid = { version = "1", features = ["v4"] }

# QR code generation (companion server)
qrcode = { version = "0.14", optional = true }

# Local network interface detection (companion server)
local-ip-address = { version = "0.6", optional = true }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = { version = "0.26", optional = true }
notify-rust = { version = "4", optional = true }

[[bin]]
name = "bench_sync"
path = "src/bin/bench_sync.rs"

[dev-dependencies]
tempfile = "3"
