[package]
name = "ultra-gitlab-cli"
version = "0.21.2"
edition = "2021"

[[bin]]
name = "ultra"
path = "src/main.rs"

[dependencies]
ultra-gitlab = { path = ".." }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures = "0.3"
syntect = "5"
dirs = "5"
chrono = "0.4"
anyhow = "1"
self_update = { version = "0.44", default-features = false, features = ["reqwest", "rustls", "archive-tar", "compression-flate2"] }
